--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="greenTheme">#004d40</color>
+    <color name="orangeTheme">#ffab40</color>
+
+    <color name="color_gray">#66000000</color>
 </resources>
