--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,17 +9,17 @@
         <item name="colorSecondary">@color/orangeTheme</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
-
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="textColorConnected">@color/color_connected</item>
         <item name="colorBottomappbar">@color/colorAccent</item>
+
+        <item name="android:windowFullscreen">true</item>
     </style>
 
     <style name="CustomStyle">
         <item name="android:textColor">@color/color_for_customStyle_title</item>
-
     </style>
 
     <style name="ThemeOne" parent="Theme.MaterialComponents.DayNight.NoActionBar">
@@ -38,6 +38,8 @@
         <item name="android:textStyle">italic</item>
         <item name="colorBottomappbar">@color/orangeTheme</item>
 
+        <item name="android:windowFullscreen">true</item>
+
     </style>
 
     <style name="ThemeSecond" parent="Theme.MaterialComponents.DayNight.NoActionBar">
@@ -55,5 +57,7 @@
         <item name="android:fontFamily">cursive</item>
         <item name="android:textStyle">bold</item>
         <item name="colorBottomappbar">@color/greenTheme</item>
+
+        <item name="android:windowFullscreen">true</item>
     </style>
 </resources>
