--- a/app/src/main/res/layout/fragment_earth.xml
+++ b/app/src/main/res/layout/fragment_earth.xml
@@ -6,7 +6,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srcCompat="@drawable/done" />
+        app:srcCompat="@drawable/questions" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -14,6 +14,15 @@
         android:layout_gravity="center_horizontal|bottom"
         android:layout_marginBottom="100dp"
         android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="7dp"
+            android:layout_marginLeft="7dp"
+            android:layout_marginEnd="7dp"
+            android:layout_marginRight="7dp"
+            android:src="@drawable/swipe_indicator_active" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -31,17 +40,7 @@
             android:layout_marginLeft="7dp"
             android:layout_marginEnd="7dp"
             android:layout_marginRight="7dp"
-            android:src="@drawable/swipe_indicator_passive"
-            />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="7dp"
-            android:layout_marginLeft="7dp"
-            android:layout_marginEnd="7dp"
-            android:layout_marginRight="7dp"
-            android:src="@drawable/swipe_indicator_active"
-            />
+            android:src="@drawable/swipe_indicator_passive" />
     </LinearLayout>
+
 </FrameLayout>
