--- a/app/src/main/res/layout/fragment_mars.xml
+++ b/app/src/main/res/layout/fragment_mars.xml
@@ -6,7 +6,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srcCompat="@drawable/done" />
+        app:srcCompat="@drawable/think" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -31,8 +31,7 @@
             android:layout_marginLeft="7dp"
             android:layout_marginEnd="7dp"
             android:layout_marginRight="7dp"
-            android:src="@drawable/swipe_indicator_passive"
-            />
+            android:src="@drawable/swipe_indicator_active" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -41,7 +40,6 @@
             android:layout_marginLeft="7dp"
             android:layout_marginEnd="7dp"
             android:layout_marginRight="7dp"
-            android:src="@drawable/swipe_indicator_active"
-            />
+            android:src="@drawable/swipe_indicator_passive" />
     </LinearLayout>
 </FrameLayout>
