lesson3 favorite btm

--- a/app/src/main/res/layout/activity_api_tabitem_questions.xml
+++ b/app/src/main/res/layout/activity_api_tabitem_questions.xml
@@ -8,10 +8,10 @@
         android:id="@+id/tabImageTextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_system"
+        android:drawableStart="@drawable/ic_qestion"
         android:drawablePadding="10dp"
         android:gravity="center_vertical"
-        android:text="System"
+        android:text="@string/wtf"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
