--- a/app/src/main/res/layout/activity_api_tabitem_done.xml
+++ b/app/src/main/res/layout/activity_api_tabitem_done.xml
@@ -8,10 +8,10 @@
         android:id="@+id/tabImageTextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_earth"
+        android:drawableStart="@drawable/ic_done"
         android:drawablePadding="10dp"
         android:gravity="center_vertical"
-        android:text="Earth"
+        android:text="@string/done"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
