--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -84,6 +84,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView"
             app:layout_constraintVertical_bias="0.0" />
 
+
         <com.google.android.material.chip.Chip
             android:id="@+id/today_btn"
             android:layout_width="wrap_content"
@@ -108,6 +109,15 @@
             app:layout_constraintStart_toEndOf="@+id/today_btn"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout_days"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            app:layout_constraintVertical_bias="0.231" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
