--- a/app/src/main/res/layout/fragment_done.xml
+++ b/app/src/main/res/layout/fragment_done.xml
@@ -31,8 +31,7 @@
             android:layout_marginLeft="7dp"
             android:layout_marginEnd="7dp"
             android:layout_marginRight="7dp"
-            android:src="@drawable/swipe_indicator_passive"
-            />
+            android:src="@drawable/swipe_indicator_passive" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -41,7 +40,6 @@
             android:layout_marginLeft="7dp"
             android:layout_marginEnd="7dp"
             android:layout_marginRight="7dp"
-            android:src="@drawable/swipe_indicator_active"
-            />
+            android:src="@drawable/swipe_indicator_active" />
     </LinearLayout>
 </FrameLayout>
