lesson5 начало. TransitionSet

--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -9,4 +9,9 @@
         android:icon="@drawable/ic_send"
         android:title="@string/screen2" />
 
+    <item
+        android:id="@+id/navigation_three"
+        android:icon="@drawable/ic_send"
+        android:title="@string/screen3" />
+
 </menu>
