--- a/app/src/main/res/layout/fragment_coordinator.xml
+++ b/app/src/main/res/layout/fragment_coordinator.xml
@@ -66,7 +66,7 @@
         android:id="@+id/myButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/btn_earth"
+        android:src="@drawable/btn_moon"
         android:text="+"
         android:background="@xml/shape_btn"
         app:layout_anchor="@id/main_appbar"
