--- a/app/src/main/res/layout/activity_animations.xml
+++ b/app/src/main/res/layout/activity_animations.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backforanim">
-
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -25,5 +21,30 @@
         android:visibility="invisible"
         app:srcCompat="@drawable/collaps" />
 
+    <Button
+        android:id="@+id/button_transitions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="16dp"
+        android:background="@xml/shape_btn"
+        android:text="@string/shuffle"
+        android:visibility="invisible" />
+
+    <LinearLayout
+        android:id="@+id/transitions_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal" />
+
+    <Button
+        android:id="@+id/btn_move"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@xml/shape_btn"
+        android:text="@string/push"
+        android:visibility="invisible" />
 
 </FrameLayout>
