--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -25,11 +25,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:fontFamily="@font/arizonia"
+        android:fontFamily="@font/berkshire_swash"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:text="@string/title_Bottom_sheet"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_line" />
@@ -38,7 +37,7 @@
         android:id="@+id/bottom_sheet_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/alex_brush"
+
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:text="@string/description_bottom_sheet"
