--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:fontFamily="@font/berkshire_swash"
+        android:textSize="25sp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:text="@string/title_Bottom_sheet"
@@ -40,6 +41,7 @@
 
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:textSize="25sp"
         android:text="@string/description_bottom_sheet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
